swagger added; norm commity teper' bydyt
